<resources>
    <string name="app_name">練習アプリ</string>
    <string name="sub_title">サブ画面タイトル</string>
    <string name="hint">名前を入力してください</string>
    <string name="drink">ドリンク</string>
    <string name="food">フード</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="namae">名前</string>
    <string name="sendButto">送信</string>
    <string name="clearButton">クリア</string>
    <string name="confirmButton">確認</string>
    <string name="profile">プロフィール</string>
    <string name="pass">パスワードは数値で入力してください</string>
    <string name="age">年代</string>
    <string name="sex">性別</string>
    <string name="y10">10代</string>
    <string name="y20">20代</string>
    <string name="y30">30代</string>
    <string name="hint2">パスワードは数値で入力してください</string>
    <string name="tuika">データ追加</string>
    <string name="detanyuryoku">データを入力してください</string>
    <string name="thoughts">感想を入力してください</string>
    <string name="save">保存</string>
    <string name="cancel">キャンセル</string>
    <string name="reset">リセット</string>
    <string name="search">検索</string>
    <string name="camera">カメラ起動</string>
    <string-array name="currylist">
        <item>ドライカレー</item>
        <item>カツカレー</item>
    </string-array>
</resources>