<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/purofile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_const2">

    <TextView
        android:id="@+id/textProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/profile"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameText_2"
        android:layout_width="275dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textProfile" />

    <Button
        android:id="@+id/clear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="53dp"
        android:text="@string/clearButton"
        app:layout_constraintStart_toEndOf="@+id/nameText_2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passsText"
        android:layout_width="275dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText_2" />

    <Button
        android:id="@+id/clear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="254dp"
        android:text="@string/clearButton"
        app:layout_constraintBottom_toTopOf="@+id/kakunin"
        app:layout_constraintStart_toEndOf="@+id/passsText"
        app:layout_constraintTop_toBottomOf="@+id/clear1" />

    <Button
        android:id="@+id/kakunin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/confirmButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passsText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/age"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/check10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passsText" />

    <CheckBox
        android:id="@+id/check10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/y10"
        app:layout_constraintBottom_toTopOf="@+id/check20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/check30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/y30"
        app:layout_constraintBottom_toTopOf="@+id/kakunin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check20" />

    <CheckBox
        android:id="@+id/check20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/y20"
        app:layout_constraintBottom_toTopOf="@+id/check30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check10" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/sex"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/check10"
        app:layout_constraintTop_toBottomOf="@+id/passsText" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/kakunin"
        app:layout_constraintStart_toEndOf="@+id/check10"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/radioOtoko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/radioOnna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/woman" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>